@@ -1,6 +1,8 @@
 == Changes for version 0.1.1
 
 * specify explicit invocant on all method calls
+* made the `expect` attribute for Test::Builder::Plan private 
+* added tests
 
 == Changes for version 0.1.0
 
